# hrp4c_description

./: CMakeLists.txt  LICENSE  README.md  package.xml  pkgconfig.pc.cmake
cmake/: Config.cmake.in
convex/HRP4Cmain/: BODY_mesh-ch.txt  CHEEK_P_LINK_mesh-ch.txt  CHEST_P_LINK_mesh-ch.txt  CHEST_R_LINK_mesh-ch.txt  CHEST_Y_LINK_mesh-ch.txt  EYEBROW_P_LINK_mesh-ch.txt  EYELID_P_LINK_mesh-ch.txt  EYE_P_LINK_mesh-ch.txt  EYE_Y_LINK_mesh-ch.txt  LOWERLIP_P_LINK_mesh-ch.txt  L_ANKLE_P_LINK_mesh-ch.txt  L_ANKLE_R_LINK_mesh-ch.txt  L_ELBOW_P_LINK_mesh-ch.txt  L_HAND_J0_LINK_mesh-ch.txt  L_HAND_J1_LINK_mesh-ch.txt  L_HIP_P_LINK_mesh-ch.txt  L_HIP_Y_LINK_mesh-ch.txt  L_KNEE_P_LINK_mesh-ch.txt  L_SHOULDER_P_LINK_mesh-ch.txt  L_SHOULDER_R_LINK_mesh-ch.txt  L_SHOULDER_Y_LINK_mesh-ch.txt  L_WRIST_R_LINK_mesh-ch.txt  L_WRIST_Y_LINK_mesh-ch.txt  MOUTH_P_LINK_mesh-ch.txt  NECK_P_LINK_mesh-ch.txt  NECK_R_LINK_mesh-ch.txt  NECK_Y_LINK_mesh-ch.txt  R_ANKLE_R_LINK_mesh-ch.txt  R_ELBOW_P_LINK_mesh-ch.txt  R_HAND_J0_LINK_mesh-ch.txt  R_HIP_P_LINK_mesh-ch.txt  R_HIP_R_LINK_mesh-ch.txt  R_HIP_Y_LINK_mesh-ch.txt  R_KNEE_P_LINK_mesh-ch.txt  R_SHOULDER_P_LINK_mesh-ch.txt  R_SHOULDER_R_LINK_mesh-ch.txt  R_SHOULDER_Y_LINK_mesh-ch.txt  R_WRIST_R_LINK_mesh-ch.txt  R_WRIST_Y_LINK_mesh-ch.txt  UPPERLIP_P_LINK_mesh-ch.txt
meshes/HRP4Cmain/: BODY_mesh.dae  CHEEK_P_LINK_mesh.dae  CHEST_P_LINK_mesh.dae  CHEST_R_LINK_mesh.dae  CHEST_Y_LINK_mesh.dae  EYEBROW_P_LINK_mesh.dae  EYELID_P_LINK_mesh.dae  EYE_P_LINK_mesh.dae  EYE_Y_LINK_mesh.dae  LOWERLIP_P_LINK_mesh.dae  L_ANKLE_P_LINK_mesh.dae  L_ANKLE_R_LINK_mesh.dae  L_ELBOW_P_LINK_mesh.dae  L_HAND_J0_LINK_mesh.dae  L_HAND_J1_LINK_mesh.dae  L_HIP_P_LINK_mesh.dae  L_HIP_R_LINK_mesh.dae  L_HIP_Y_LINK_mesh.dae  L_KNEE_P_LINK_mesh.dae  L_SHOULDER_P_LINK_mesh.dae  L_SHOULDER_R_LINK_mesh.dae  L_SHOULDER_Y_LINK_mesh.dae  L_WRIST_R_LINK_mesh.dae  (+20 more)
rsdf/: L_ANKLE_R_LINK.rsdf  L_WRIST_R_LINK.rsdf  R_ANKLE_R_LINK.rsdf  R_WRIST_R_LINK.rsdf
urdf/: HRP4Cmain.urdf
vrml/: HRP4Cmain.wrl  Makefile
(+29 files in other folders)
